finished a basic responsive grid for the index homepage, added some placeholder pictures to each grid card to make sure each image was rezised to display the full image while also containing the whole card without overflowing

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -19,7 +19,6 @@
     height: 100%;
     max-width: 1000px;
     margin: 0 auto;
-    margin-inline-start: 0px;
     position: relative;
     top: 10vh;
 }
@@ -83,6 +82,7 @@ nav header {
 
 @media screen and (max-width: 768px) {
     .nav-links {
+        z-index: 1;
         position: absolute;
         left: 0px;
         height: 100vh;
@@ -112,9 +112,10 @@ nav header {
     }
 
     .menu-burger {
+        z-index: 1;
         align-items: center;
-        position: absolute;
-        top: 1vh;
+        position: relative;
+        top: 0.1vh;
         cursor: pointer;
     }
 }
